@@ -1,0 +1,203 @@
+<?xml version="1.0"?>
+<import-steps>
+ <import-step id="action-icons" version="20051015-01"
+              handler="Products.CMFActionIcons.exportimport.importActionIconsTool"
+              title="Action Icons">
+  <dependency step="controlpanel"/>
+    Import action icon definitions
+ </import-step>
+ <import-step id="actions" version="20040630-01"
+              handler="Products.CMFCore.exportimport.actions.importActionProviders"
+              title="Action Providers">
+  <dependency step="componentregistry"/>
+    Import actions tool's action providers and their actions.
+ </import-step>
+ <import-step id="atcttool" version="20060603-01"
+              handler="Products.ATContentTypes.exportimport.atcttool.importATCTTool"
+              title="ATContentTypes Tool">
+  <dependency step="componentregistry"/>
+  <dependency step="catalog"/>
+    Import ATContentTypes specific configuration.
+ </import-step>
+ <import-step id="catalog" version="20050929-01"
+              handler="Products.CMFCore.exportimport.catalog.importCatalogTool"
+              title="Catalog Tool">
+  <dependency step="componentregistry"/>
+    Import catalog tool's sub-objects, indexes and columns.
+ </import-step>
+ <import-step id="componentregistry" version="20061211-01"
+              handler="Products.GenericSetup.components.importComponentRegistry"
+              title="Local Component Registry">
+  <dependency step="plone-site"/>
+  <dependency step="toolset"/>
+    Import local component registry configuration.
+ </import-step>
+ <import-step id="content" version="20050927-01"
+              handler="Products.CMFCore.exportimport.content.importSiteStructure"
+              title="Content">
+  <dependency step="plone-final"/>
+    Import the site's structure and content.
+ </import-step>
+ <import-step id="content_type_registry"
+              version="20051013-01"
+              handler="Products.CMFCore.exportimport.contenttyperegistry.importContentTypeRegistry"
+              title="Content Type Registry">
+  <dependency step="componentregistry"/>
+    Import content type registry's predicates and bindings.
+ </import-step>
+ <import-step id="controlpanel" version="20060213-01"
+              handler="Products.CMFPlone.exportimport.controlpanel.importControlPanel"
+              title="Control Panel">
+  <dependency step="actions"/>
+  <dependency step="componentregistry"/>
+    Import Plone control panel actions.
+ </import-step>
+ <import-step id="cssregistry" version="20051015-01"
+              handler="Products.ResourceRegistries.exportimport.cssregistry.importCSSRegistry"
+              title="Stylesheet registry">
+  <dependency step="toolset"/>
+  <dependency step="componentregistry"/>
+    Import stylesheet registry
+ </import-step>
+ <import-step id="kssregistry" version="20070407-01"
+              handler="Products.ResourceRegistries.exportimport.kssregistry.importKSSRegistry"
+              title="KSS registry">
+  <dependency step="toolset"/>
+  <dependency step="componentregistry"/>
+    Import KSS registry
+ </import-step>
+ <import-step id="factorytool" version="20060711-01"
+              handler="Products.CMFPlone.exportimport.factorytool.importFactoryTool"
+              title="Portal Factory Tool">
+  <dependency step="componentregistry"/>
+  <dependency step="typeinfo"/>
+  Import type registration for the portal factory tool.
+ </import-step>
+ <import-step id="jsregistry" version="20051015-01"
+              handler="Products.ResourceRegistries.exportimport.jsregistry.importJSRegistry"
+              title="Javascript registry">
+  <dependency step="toolset"/>
+  <dependency step="componentregistry"/>
+    Import javascript registry
+ </import-step>
+ <import-step id="mailhost" version="20050803-01"
+              handler="Products.CMFCore.exportimport.mailhost.importMailHost"
+              title="MailHost">
+  <dependency step="componentregistry"/>
+    Import mailhost settings
+ </import-step>
+ <import-step id="memberdata-properties"
+              version="20051108-01"
+              handler="Products.CMFPlone.exportimport.memberdata_properties.importMemberDataProperties"
+              title="MemberData Properties">
+  <dependency step="componentregistry"/>
+    Import MemberData properties
+ </import-step>
+ <import-step id="plone-archetypes" version="20070318-01"
+              handler="Products.CMFPlone.setuphandlers.importArchetypes"
+              title="Plone Archetypes Import">
+  <dependency step="componentregistry"/>
+    Plone Archetypes import
+ </import-step>
+
+ <import-step id="plone-content" version="20061230-01"
+              handler="Products.CMFPlone.setuphandlers.importContent"
+              title="Plone Content Import">
+  <dependency step="content"/>
+  <dependency step="plone-final"/>
+    Plone content import
+ </import-step>
+ <import-step id="plone-final" version="20051110-01"
+              handler="Products.CMFPlone.setuphandlers.importFinalSteps"
+              title="Final Plone Config">
+  <dependency step="kss_mimetype"/>
+  <dependency step="plone_various"/>
+  <dependency step="portlets"/>
+    Final Plone configuration
+ </import-step>
+ <import-step id="plone-site" version="20061227-01"
+              handler="Products.CMFPlone.setuphandlers.importSite"
+              title="Plone Site Config">
+    Plone site configuration
+ </import-step>
+ <import-step id="plone_various" version="20061227-01"
+              handler="Products.CMFPlone.setuphandlers.importVarious"
+              title="Various Plone Settings">
+  <dependency step="catalog"/>
+  <dependency step="cssregistry"/>
+  <dependency step="kssregistry"/>
+  <dependency step="jsregistry"/>
+  <dependency step="propertiestool"/>
+  <dependency step="rolemap"/>
+  <dependency step="skins"/>
+  <dependency step="typeinfo"/>
+    Plone specific settings
+ </import-step>
+ <import-step id="properties" version="20041215-01"
+              handler="Products.CMFCore.exportimport.properties.importSiteProperties"
+              title="Site Properties">
+    Import site properties.
+ </import-step>
+ <import-step id="propertiestool" version="20051101-01"
+              handler="Products.CMFPlone.exportimport.propertiestool.importPloneProperties"
+              title="Plone Properties">
+  <dependency step="componentregistry"/>
+    Export plone properties tool and subobjects.
+ </import-step>
+ <import-step id="rolemap" version="20040523-01"
+              handler="Products.GenericSetup.rolemap.importRolemap"
+              title="Role / Permission Map">
+    Import custom roles and non-default role-permission mappings.
+ </import-step>
+ <import-step id="skins" version="20040630-01"
+              handler="Products.CMFCore.exportimport.skins.importSkinsTool"
+              title="Skins Tool">
+  <dependency step="componentregistry"/>
+    Import skins tool's filesystem directory views and skin path definitions.
+ </import-step>
+ <import-step id="toolset" version="20040630-01"
+              handler="Products.GenericSetup.tool.importToolset"
+              title="Required tools">
+    Create required tools, replacing any of the wrong class, and remove
+    forbidden ones.
+ </import-step>
+ <import-step id="typeinfo" version="20040630-01"
+              handler="Products.CMFCore.exportimport.typeinfo.importTypesTool"
+              title="Types Tool">
+  <dependency step="componentregistry"/>
+    Import types tool's type information objects.
+ </import-step>
+ <import-step id="workflow" version="20040630-01"
+              handler="Products.CMFCore.exportimport.workflow.importWorkflowTool"
+              title="Workflow Tool">
+  <dependency step="componentregistry"/>
+  <dependency step="typeinfo"/>
+    Import workflow tool's workflow definitions and supporting scripts.
+ </import-step>
+ <import-step id="viewlets" version="20070503-01"
+              handler="plone.app.viewletmanager.exportimport.storage.importViewletSettingsStorage"
+              title="Viewlet Settings">
+  <dependency step="componentregistry"/>
+    Import viewlet settings
+ </import-step>
+ <import-step id="kss_mimetype" version="20061125-01"
+              handler="plone.app.kss.exportimport.setup.setupMimetype"
+              title="KSS setup / mimetype">
+  <dependency step="plone-archetypes"/>
+  <dependency step="mimetypes-registry-various"/>
+    KSS (Kinetic Style Sheet) setup. Register kss mimetype.
+ </import-step>
+ <import-step id="plone-difftool" version="20081114-01"
+              handler="Products.CMFDiffTool.exportimport.difftool.importDiffTool"
+              title="Diff Tool">
+   <dependency step="plone_various"/>
+   Import CMFDiffTool settings
+ </import-step>
+ <import-step id="kupu-setup" version="20061211-01"
+              handler="Products.kupu.plone.exportimport.importKupuSettings"
+              title="Kupu Settings">
+  <dependency step="toolset"/>
+  <dependency step="typeinfo"/>
+  Import Kupu settings
+ </import-step>
+</import-steps>
